samples/_failures_safe/1761216803_49eba2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55140fda.c: In function ‘main’:
./samples/SAFE/__tmp_55140fda.c:158:12: error: missing terminating " character
  158 |     printf("Enter edges as 'u v
      |            ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_55140fda.c:158:5: error: expected expression at end of input
  158 |     printf("Enter edges as 'u v
      |     ^~~~~~
./samples/SAFE/__tmp_55140fda.c:158:5: error: expected declaration or statement at end of input
